[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akamai_shared_cloudlets"
version = "0.0.2"
authors = [
  { name="Tomas Hampl", email="tomas.hampl@gmail.com" },
]
description = "Library containing number of requests that can be used to control the Akamai Shared Cloudlets"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "edgegrid-python >= 1.3.1",
    "requests >= 2.31.0",
    "jsonpath-ng >= 1.5.3"
]

[tool.hatch.build.targets.wheel]
packages = ["akamai-shared-cloudlets/src"]
require-runtime-dependencies = true
[tool.hatch.build.sources]
"akamai-shared-cloudlets/src" = "akamai-shared-cloudlets"
[tool.hatch.build]
skip-excluded-dirs = true





classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TomasHampl/akamai_shared_cloudlets.git"
"Bug Tracker" = "https://github.com/TomasHampl/akamai_shared_cloudlets/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    ]
testpaths = [
    "tests",
]
pythonpath = [
    "."
]