[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akamai_shared_cloudlets"
version = "0.0.8"
authors = [
  { name="Tomas Hampl", email="tomas.hampl@gmail.com" },
]
description = "Library that implements Akamai API requests to control the cloudlet API version 3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "edgegrid-python",
    "requests"
]

[tool.hatch.build.targets.wheel]
packages = [
    "akamai-shared-cloudlets/src",
    "requirements.txt"
]
require-runtime-dependencies = true
[tool.hatch.build.sources]
"akamai-shared-cloudlets/src" = "akamai-shared-cloudlets"
[tool.hatch.build]
skip-excluded-dirs = true
[tool.hatch.metadata]
allow-direct-references = true

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TomasHampl/akamai_shared_cloudlets.git"
"Bug Tracker" = "https://github.com/TomasHampl/akamai_shared_cloudlets/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--import-mode=importlib",
    ]
testpaths = [
    "tests",
]
pythonpath = [
    "."
]